cedar-lean/UnitTest/parser_tests/negative/like_without_pattern.cedar
permit(principal, action, resource) when { resource.name like };
